VMF 3 anf vmf forcast added

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -59,10 +59,18 @@ dcb_aiub = "?{aiub}/CODE/${YYYY}/"
 atm_load_tuwien = "?{ggos_tuwien}/APL_products/GRID/${YYYY}/"
 
 # old vmf_tuwien = "?{ggos_tuwien}/DELAY/GRID/VMFG/${YYYY}/"
-vmf_tuwien = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_OP/${YYYY}/"
+tuw_vmf1_2.5x2_oc = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_OP/${YYYY}/"
 # old vmf_fc_tuwien = "?{ggos_tuwien}/DELAY/GRID/VMFG_FC/${YYYY}/"
 # it seems that now the predicted VMF have a required subscription to download them
-vmf_fc_tuwien = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_FC/${YYYY}/"
+tuw_vmf1_2.5x2_fc = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_FC/${YYYY}/"
+tuw_vmf3_1x1_op = "?{ggos_tuwien}/trop_products/GRID/1x1/VMF3/VMF3_OP/${YYYY}/"
+tuw_vmf3_1x1_ei = "?{ggos_tuwien}/trop_products/GRID/1x1/VMF3/VMF3_EI/${YYYY}/"
+tuw_vmf3_1x1_fc = "?{ggos_tuwien}/trop_products/GRID/1x1/VMF3/VMF3_FC/${YYYY}/"
+tuw_vmf3_5x5_op = "?{ggos_tuwien}/trop_products/GRID/5x5/VMF3/VMF3_OP/${YYYY}/"
+tuw_vmf3_5x5_ei = "?{ggos_tuwien}/trop_products/GRID/5x5/VMF3/VMF3_EI/${YYYY}/"
+tuw_vmf3_5x5_fc = "?{ggos_tuwien}/trop_products/GRID/5x5/VMF3/VMF3_FC/${YYYY}/"
+
+
 
 mgex_brdm = "?{cddis}/pub/gps/data/campaign/mgex/daily/rinex3/${YYYY}/brdm/"
 
@@ -177,7 +185,7 @@ available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gp
 # ORBIT CENTER DEFINITION
 #***************************************************************************************************
 
-# DEFAULT ------------------------------------------------------------------------------------------
+# NONE ------------------------------------------------------------------------------------------
 
 [oc_none]
 description = "Empty center, no orbits or other resources are needed"
@@ -201,7 +209,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 
 # DEFAULT ------------------------------------------------------------------------------------------
@@ -218,7 +225,14 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
+vmf1_2.5x2_op = "tuw_vmf1_2.5x2_op"
+vmf1_2.5x2_fc = "tuw_vmf1_2.5x2_fc"
+vmf3_1x1_op = "tuw_vmf3_1x1_op"
+vmf3_1x1_ei = "tuw_vmf3_1x1_ei"
+vmf3_1x1_fc = "tuw_vmf3_1x1_fc"
+vmf3_5x5_op = "tuw_vmf3_5x5_op"
+vmf3_5x5_ei = "tuw_vmf3_5x5_ei"
+vmf3_5x5_fc = "tuw_vmf3_5x5_fc"
 hoic = "hoic_gfz"
 soic = "soic_gfz"
 
@@ -235,7 +249,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [oc_igs_gps]
 description = "IGS average solution - GPS"
@@ -249,7 +262,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [oc_igs_glo]
 description = "IGS average solution - GLONASS"
@@ -261,7 +273,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # CODE ---------------------------------------------------------------------------------------------
 [oc_code5s]
@@ -273,7 +284,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [oc_code1d]
 description = "Center for Orbit Determination Europe - 1 day arc"
@@ -284,7 +294,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [oc_code]
 description = "Center for Orbit Determination Europe - 3 day arc"
@@ -295,7 +304,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [oc_code_predicted]
 description = "Center for Orbit Determination Europe - 1 day predicted - experimental"
@@ -319,7 +327,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # BNC ----------------------------------------------------------------------------------------------
 [oc_bnc]
@@ -346,7 +353,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # CODE MGEX ----------------------------------------------------------------------------------------
 
@@ -359,7 +365,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # CNES MGEX ----------------------------------------------------------------------------------------
 
@@ -372,7 +377,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # Natural Resources Canada -------------------------------------------------------------------------
 
@@ -388,7 +392,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # ESOC ---------------------------------------------------------------------------------------------
 
@@ -404,7 +407,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "esa"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [oc_esoc_cddis]
 description = "Final European Space Operation Center ( ESOC ) from cddis"
@@ -414,7 +416,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "esa"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # ESOC MGEX ----------------------------------------------------------------------------------------
 
@@ -426,7 +427,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "esa"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # JAXA MGEX ----------------------------------------------------------------------------------------
 
@@ -438,7 +438,6 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 # WUHAN --------------------------------------------------------------------------------------------
 
@@ -455,7 +454,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 #***************************************************************************************************
 # SINGLE FILE DEFINITION FOR ORBITS
@@ -544,7 +542,6 @@ dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
-vmf = "tuw_vmf | tuw_vmf_fc"
 
 [f_code1d_sp3]
 name = ["GR@cod"]
@@ -901,13 +898,38 @@ location = ["whu_mgex"]
 filename = "${YYYY}${MM}${DD}${6H}_cm_v004.apl"
 location = ["atm_load_tuwien"]
 
-[f_tuw_vmf]
+[f_tuw_vmf1_2.5x2_op]
 filename = "VMFG_${YYYY}${MM}${DD}.H${6H}"
-location = ["vmf_tuwien"]
+location = ["tuw_vmf1_2.5x2_op"]
 
-[f_tuw_vmf_fc]
+[f_tuw_vmf1_2.5x2_fc]
 filename = "VMFG_${YYYY}${MM}${DD}.H${6H}"
-location = ["vmf_fc_tuwien"]
+location = ["tuw_vmf1_2.5x2_fc"]
+
+[f_tuw_vmf3_1x1_op]
+filename = "VMF3_${YYYY}${MM}${DD}.H${6H}"
+location = ["tuw_vmf3_1x1_op"]
+
+[f_tuw_vmf3_1x1_ei]
+filename = "VMF3_${YYYY}${MM}${DD}.H${6H}"
+location = ["tuw_vmf3_1x1_ei"]
+
+[f_tuw_vmf3_1x1_fc]
+filename = "VMF3_${YYYY}${MM}${DD}.H${6H}"
+location = ["tuw_vmf3_1x1_fc"]
+
+[f_tuw_vmf3_5x5_op]
+filename = "VMF3_${YYYY}${MM}${DD}.H${6H}"
+location = ["tuw_vmf3_5x5_op"]
+
+[f_tuw_vmf3_5x5_ei]
+filename = "VMF3_${YYYY}${MM}${DD}.H${6H}"
+location = ["tuw_vmf3_5x5_ei"]
+
+[f_tuw_vmf3_5x5_fc]
+filename = "VMF3_${YYYY}${MM}${DD}.H${6H}"
+location = ["tuw_vmf3_5x5_fc"]
+
 
 # DLR & TUM ----------------------------------------------------------------------------------------
 
