bug fix: remote location vmf1 op

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -62,6 +62,7 @@ atm_load_tuwien = "?{ggos_tuwien}/APL_products/GRID/${YYYY}/"
 tuw_vmf1_2.5x2_oc = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_OP/${YYYY}/"
 # old vmf_fc_tuwien = "?{ggos_tuwien}/DELAY/GRID/VMFG_FC/${YYYY}/"
 # it seems that now the predicted VMF have a required subscription to download them
+tuw_vmf1_2.5x2_op = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_OP/${YYYY}/"
 tuw_vmf1_2.5x2_fc = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_FC/${YYYY}/"
 tuw_vmf3_1x1_op = "?{ggos_tuwien}/trop_products/GRID/1x1/VMF3/VMF3_OP/${YYYY}/"
 tuw_vmf3_1x1_ei = "?{ggos_tuwien}/trop_products/GRID/1x1/VMF3/VMF3_EI/${YYYY}/"
