First part update of remote_resurce.ini

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -34,6 +34,7 @@ glo = "?{bkg}/IGS/products/orbits/${WWWW}/"
 mgex = "?{bkg}/IGS/products/mgex/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
 code_rt = "?{aiub}/CODE/"
+aiub_mgex = "?{aiub}//CODE_MGEX/CODE/${YYYY}/"
 garner = "?{sopac}/archive/garner/products/${WWWW}/"
 garner_base = "?{sopac}/archive/garner/products/"
 whu_mgex = "?{whu}/pub/whu/MGEX/${WWWW}/"
@@ -108,7 +109,7 @@ iono_broadcast = "code_iono_broadcast"
 [ic_cnes]
 description = "Centre national d'études spatiales"
 iono_final = "cnes_ionex"
-iono_predicted1 = ""
+iono_predicted1 = "cnes_ionex_rapid"
 iono_predicted2 = ""
 iono_broadcast = ""
 
@@ -138,6 +139,10 @@ iono_broadcast = ""
 #***************************************************************************************************
 
 [f_cnes_ionex]
+filename = "igsg${DOY}0.${YY}i"
+location = "iono_cddis"
+
+[f_cnes_ionex_rapid]
 filename = "igrg${DOY}0.${YY}i"
 location = "iono_cddis"
 
@@ -180,7 +185,7 @@ location = "iono_cddis"
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
@@ -216,7 +221,7 @@ atm_load = "tuw_atm_load_v04"
 
 [oc_default]
 description = "IGS average solution "
-final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_5m_final )"
+final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
 rapid = "igs_eph_gps_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
@@ -240,7 +245,7 @@ soic = "soic_gfz"
 
 [oc_igs_legacy]
 description = "IGS average solution - GPS - no mandatory CLK"
-final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2) & ( igs_clk_30s | igs_clk_5m_final | null)"
+final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final | null)"
 final_latency = [288 432]
 rapid = "igs_eph_gps_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid | null )"
 rapid_latency = [17 41]
@@ -253,7 +258,7 @@ atm_load = "tuw_atm_load_v04"
 
 [oc_igs_gps]
 description = "IGS average solution - GPS"
-final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_5m_final )"
+final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
 rapid = "igs_eph_gps_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
@@ -266,7 +271,7 @@ atm_load = "tuw_atm_load_v04"
 
 [oc_igs_glo]
 description = "IGS average solution - GLONASS"
-final = "igs_eph_glo_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_5m_final )"
+final = "igs_eph_glo_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
 rapid = "igs_eph_glo_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
@@ -355,10 +360,22 @@ broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
 
+# CODE MGEX @ AIUB ---------------------------------------------------------------------------------
+
+[oc_code_mgex_aiub]
+description = "Center for Orbit Determination Europe - MGEX from AIUB server (different names)"
+final = "code_mgex_aiub_eph & ( code_mgex_aiub_erp ) & ( code_mgex_aiub_clk_30s )"
+final_latency = [168 312]
+bias = "code_mgex_aiub_bias"
+broadcast = "dlrtum_broadcast"
+broadcast_latency = [0 9]
+iono_center = "code"
+atm_load = "tuw_atm_load_v04"
+
 # CODE MGEX ----------------------------------------------------------------------------------------
 
 [oc_code_mgex]
-description = "Center for Orbit Determination Europe - MGEX"
+description = "(Backup)     Center for Orbit Determination Europe - MGEX"
 final = "code_mgex_eph & ( code_mgex_erp ) & ( code_mgex_clk_30s )"
 final_latency = [168 312]
 bias = "code_mgex_bias"
@@ -488,6 +505,10 @@ filename = "igu${WWWWD}_${6H}.sp3"
 location = ["gps" "garner"]
 
 [f_igs_clk_30s]
+filename = "igs${WWWWD}.clk"
+location = ["gps" "garner"]
+
+[f_igs_clk_30s_old]
 filename = "igs${WWWWD}.clk_30s"
 location = ["gps" "garner"]
 
@@ -726,10 +747,28 @@ location = ["mgex"]
 [f_hoic_gfz]
 filename = "IFCz${YYYY}${MM}.H${HH}"
 location = ["hoic_gfz"]
+
 [f_soic_gfz]
 filename = "SFCz${YYYY}${MM}.H${HH}"
 location = ["soic_gfz"]
 
+# CODE MGEX @ AIUB ---------------------------------------------------------------------------------
+
+[f_code_mgex_aiub_eph]
+filename = "COM${WWWWD}.EPH"
+location = ["aiub_mgex"]
+
+[f_code_mgex_aiub_clk_30s]
+filename = "COM${WWWWD}.CLK"
+location = ["aiub_mgex"]
+
+[f_code_mgex_aiub_erp]
+filename = "COM${WWWWD}.ERP"
+location = ["aiub_mgex"]
+
+[f_code_mgex_aiub_bias]
+filename = "COM${WWWWD}.BIA"
+location = ["aiub_mgex"]
 
 # CODE MGEX ----------------------------------------------------------------------------------------
 
