Update default settings

--- a/data/project/default_PPP/config/settings.ini
+++ b/data/project/default_PPP/config/settings.ini
@@ -113,10 +113,17 @@ flag_download = 1
 # accepted values: "final" "rapid" "ultra" "broadcast"
 preferred_eph = ["final" "rapid" "ultra"]
 # Preferred ionospheric type,
-# accepted values: "final" "predicted1" "predicted2" "broadcast"
-preferred_iono = ["final" "predicted1" "predicted2" "broadcast"]
+# accepted values: "final" "rapid" "predicted1" "predicted2" "broadcast"
+preferred_iono = ["final" "rapid" "predicted1" "predicted2" "broadcast"]
 # SELECTED computational center (e.g. default, igs_glo, igs_gps, code, code_mgex, gfz, jaxa
-selected_center = ["default"]
+selected_orbit_center = ["default"]
+selected_iono_center = ["code"]
+# Preferred VMF resolution,
+# accepted values: "1x1" "2.5x2" "5x5"
+preferred_vmf_res = ["1x1" "2.5x2" "5x5"]
+# Preferred VMF source,
+# accepted values: "operational" "era-interim" "forecast"
+preferred_vmf_source = ["operational" "era-interim" "forecast"]
 
 #----------------------------------------------------------------------------------
 [REFERENCE]
@@ -313,6 +320,8 @@ SBS_is_active = 0
 SBS_L1 = 0
 SBS_L5 = 0
 
+# Minimum percentage of required epochs for processing [0-100]
+min_p_epoch = 30
 # Minimum number of satellite per epoch
 min_n_sat = 2
 # Cut-off [degrees]
@@ -322,8 +331,7 @@ abs_snr_thr = 0
 # Signal-to-noise ratio scaled threshold [dB]
 # scaling is performet with respect to the code error level of the first frequency/tracking (usually 1C)
 scaled_snr_thr = 0
-# Minimum length an arc (a satellite to be used must be seen for a number of
-# consecutive epochs equal or greater than this value)
+# Minimum length an arc in seconds
 min_arc = 10
 
 # Enable outlier detection (0/1)
@@ -452,8 +460,10 @@ zd_model = 2
 # Mapping function
 mapping_function = 2
 #  1: Global Mapping Function
-#  2: Vienna Mapping Function gridded
+#  2: Vienna Mapping Function 1 gridded
 #  3: Niell Mapping Function
+#  4: Vienna Mapping Function 3 1x1 gridded
+#  5: Vienna Mapping Function 3 5x5 gridded
 mapping_function_gradient = 1
 #  1: Chen and Herring
 #  2: MacMillan
@@ -487,9 +497,9 @@ flag_coo_net = 1
 tparam_coo_ppp = 1
 # Time parametrization coordimates network
 tparam_coo_net = 1
-# Frequency paramterization coordinates PPP
+# Frequency parametrization coordinates PPP
 fparam_coo_ppp = 3
-# Frequency paramterization coordinates network
+# Frequency parametrization coordinates network
 fparam_coo_net = 3
 # Rate coordinates PPP
 rate_coo_ppp = 0
@@ -529,9 +539,9 @@ dreg_ztd_net = 0.0015
 flag_grad_ppp = 1
 # Estimates ZTD gradients in network
 flag_grad_net = 1
-# Time paramterization ZTD gradients in PPP
+# Time parametrization ZTD gradients in PPP
 tparam_grad_ppp = 1
-# Time paramterization ZTD gradients in network
+# Time parametrization ZTD gradients in network
 tparam_grad_net = 1
 # Rate ZTD gardients in PPP
 rate_grad_ppp = 1800
@@ -587,9 +597,9 @@ dreg_sat_clock_net = 1e+30
 flag_rec_ifbias_ppp = 0
 # Estimate receiver interfrequency bias in network
 flag_rec_ifbias_net = 0
-# Time paramterization receiver interfrequency bias in PPP
+# Time parametrization receiver interfrequency bias in PPP
 tparam_rec_ifbias_ppp = 6
-# Time paramterization receiver interfrequency bias in network
+# Time parametrization receiver interfrequency bias in network
 tparam_rec_ifbias_net = 6
 # Rate receiver interfrequency bias in PPP
 rate_rec_ifbias_ppp = 3600
@@ -607,9 +617,9 @@ dreg_rec_ifbias_net = -1
 flag_sat_ifbias_ppp = 1
 # Estimate satellite interfrequency bias in network
 flag_sat_ifbias_net = 1
-# Time paramterization satellite interfrequency bias in PPP
+# Time parametrization satellite interfrequency bias in PPP
 tparam_sat_ifbias_ppp = 6
-# Time paramterization satellite interfrequency bias in network
+# Time parametrization satellite interfrequency bias in network
 tparam_sat_ifbias_net = 6
 # Rate satellite interfrequency bias in PPP
 rate_sat_ifbias_ppp = 3600
@@ -627,9 +637,9 @@ dreg_sat_ifbias_net = -1
 flag_rec_trkbias_ppp = 1
 # Estimate receiver intertracking bias in network
 flag_rec_trkbias_net = 1
-# Time paramterization receiver intertracking bias in PPP
+# Time parametrization receiver intertracking bias in PPP
 tparam_rec_trkbias_ppp = 1
-# Time paramterization receiver intertracking bias in network
+# Time parametrization receiver intertracking bias in network
 tparam_rec_trkbias_net = 1
 # Rate receiver intertracking bias in PPP
 rate_rec_trkbias_ppp = 0
@@ -647,9 +657,9 @@ dreg_rec_trkbias_net = -1
 flag_sat_trkbias_ppp = 1
 # Estimate satellite intertracking bias in network
 flag_sat_trkbias_net = 1
-# Time paramterization satellite intertracking bias in PPP
+# Time parametrization satellite intertracking bias in PPP
 tparam_sat_trkbias_ppp = 1
-# Time paramterization satellite intertracking bias in network
+# Time parametrization satellite intertracking bias in network
 tparam_sat_trkbias_net = 1
 # Rate satellite intertracking bias in PPP
 rate_sat_trkbias_ppp = 0
@@ -701,6 +711,7 @@ flag_sreg_ztd_ppp = 0
 #  - EMPTYWORK
 #  - EMPTYOUT
 #  - AZEL
+#  - MASK
 #  - BASICPP
 #  - PREPRO
 #  - OUTDET
@@ -757,6 +768,7 @@ flag_sreg_ztd_ppp = 0
 #              Modifiers:
 #                -s=<sat_list>      Active constellations (e.g. -s=GRE)
 #                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -t=<obs_type_list> Type of observation (e.g. -s=CPLSD)
 # 
 # ----------------------------------------------------------------------------------------------
 #  - RENAME    Rename a receiver (change marker name)
@@ -785,6 +797,11 @@ flag_sreg_ztd_ppp = 0
 # 
 # ----------------------------------------------------------------------------------------------
 #  - AZEL      Compute Azimuth and elevation 
+# 
+#              Admissible receivers: T
+# 
+# ----------------------------------------------------------------------------------------------
+#  - MASK      Apply Masking (Requires GReD_Utility Class)
 # 
 #              Admissible receivers: T
 # 
@@ -953,10 +970,13 @@ flag_sreg_ztd_ppp = 0
 #                ZHD                Zenith Hydrostatic Delay
 #                ZWD                Zenith Wet Delay
 #                ZWD_VSH            Zenith Wet Delay vs Height
+#                ZWD_STAT           Zenith Wet Delay processing statust
 #                PWV                Precipitable Water Vapour
 #                STD                Zenith Total Delay with slants
 #                RES_STD            Slants Total Delay residuals (polar plot)
 #                TGRAD              Tropospheric gradients table
+#                ORBOK              Available orbits for the current session
+#                ALLORBOK           Available orbits for all the sessions
 # 
 # ----------------------------------------------------------------------------------------------
 #  - VALIDATE  Validate estimated parameter with external data
@@ -982,6 +1002,7 @@ flag_sreg_ztd_ppp = 0
 #                REC_RIN            Rinex file containing the actual data stored in rec.work
 #                MP                 Export the multipath maps stored in the GNSS_Station object.
 #                COO_CRD            Coordinates .CRD file
+#                COO_TXT            Coordinates .COO file (one per receiver)
 #                XYZ_TXT            Coordinates XYZ in plain text format
 #                ENU_TXT            Coordinates local ENU in plain text format
 #                GEO_TXT            Coordinates Geodetic in plain text format
