Add multiple new ionex entries

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -7,6 +7,7 @@
 cddis = ["cddis.gsfc.nasa.gov" "21"]
 aiub = ["ftp.aiub.unibe.ch" "21"]
 ign = ["igs.ign.fr" "21"]
+ign_ensg = ["igs.ensg.ign.fr" "21"]
 jpl = ["sideshow.jpl.nasa.gov" "21"]
 whu = ["igs.gnsswhu.cn" "21"]
 sopac = ["garner.ucsd.edu" "21"]
@@ -34,7 +35,7 @@ glo = "?{bkg}/IGS/products/orbits/${WWWW}/"
 mgex = "?{bkg}/IGS/products/mgex/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
 code_rt = "?{aiub}/CODE/"
-aiub_mgex = "?{aiub}//CODE_MGEX/CODE/${YYYY}/"
+aiub_mgex = "?{aiub}/CODE_MGEX/CODE/${YYYY}/"
 garner = "?{sopac}/archive/garner/products/${WWWW}/"
 garner_base = "?{sopac}/archive/garner/products/"
 whu_mgex = "?{whu}/pub/whu/MGEX/${WWWW}/"
@@ -42,11 +43,12 @@ jpl_final = "?{jpl}/pub/jpligsac/${WWWW}/"
 jpl_rapid = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/"
 gfz_mgex = "?{gfz}/pub/GNSS/products/mgex/${WWWW}/"
 gfz_mgex_ultra =  "?{gfz}/pub/GNSS/products/ultra/w${WWWW}/"
-rtpp = "?{cddis}/pub/gps/products/rtpp/${WWWW}/"
+rtpp = "?{ign_ensg}/pub/gps/products/rtpp/${WWWW}/"
 
-brdc = "?{cddis}/gnss/data/daily/${YYYY}/brdc/"
+#brdc = "?{cddis}/gnss/data/daily/${YYYY}/brdc/"
 
-iono_cddis = "?{cddis}/gnss/products/ionex/${YYYY}/${DOY}/"
+#iono_cddis = "?{cddis}/gnss/products/ionex/${YYYY}/${DOY}/"
+iono_ign = "?{ign_ensg}/pub/igs/products/ionosphere/${YYYY}/${DOY}/"
 iono_aiub = "?{aiub}/CODE/IONO/${YYYY}/${DOY}/"
 iono_aiub_p1 = "?{aiub}/CODE/IONO/P1/${YYYY}/"
 iono_aiub_p2 = "?{aiub}/CODE/IONO/P2/${YYYY}/"
@@ -86,7 +88,7 @@ none = ""
 #***************************************************************************************************
 
 [IONO_CENTER]
-available = ["none" "default" "cnes" "esa" "code" "whuan"]
+available = ["none" "default" "igs" "esa" "jpl" "nrcan" "code" "tucat" "cas" "whuan"]
 
 #***************************************************************************************************
 # IONO CENTER DEFINITION
@@ -100,22 +102,25 @@ iono_predicted2 = "empty"
 iono_broadcast = "empty"
 
 [ic_default]
-description = "Default: Center for Orbit Determination Europe"
-iono_final = "code_ionex"
+description = "Default: IGS final + CODE"
+iono_final = "igs_ionex"
+iono_rapid = "code_ionex_rapid"
 iono_predicted1 = "code_predicted1"
 iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
 
-[ic_cnes]
-description = "Centre national d'études spatiales"
-iono_final = "cnes_ionex"
-iono_predicted1 = "cnes_ionex_rapid"
+[ic_igs]
+description = "IGS average solution "
+iono_final = "igs_ionex"
+iono_rapid = ""
+iono_predicted1 = ""
 iono_predicted2 = ""
 iono_broadcast = ""
 
 [ic_code]
 description = "Center for Orbit Determination Europe"
 iono_final = "code_ionex"
+iono_rapid = "code_ionex_rapid"
 iono_predicted1 = "code_predicted1"
 iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
@@ -123,40 +128,126 @@ iono_broadcast = "code_iono_broadcast"
 [ic_esa]
 description = "European Space Agency"
 iono_final = "esa_ionex"
-iono_predicted1 = "esa_predicted1"
-iono_predicted2 = "esa_predicted2"
+iono_rapid = "esa_ionex_rapid"
+iono_predicted1 = ""
+iono_predicted2 = ""
+iono_broadcast = ""
+
+[ic_jpl]
+description = "Jet Propulsion Lab"
+iono_final = "jpl_ionex"
+iono_rapid = "jpl_ionex_rapid"
+iono_predicted1 = ""
+iono_predicted2 = ""
+iono_broadcast = ""
+
+[ic_nrcan]
+description = "National Resources Canada"
+iono_final = ""
+iono_rapid = "nrcan_ionex_rapid"
+iono_predicted1 = ""
+iono_predicted2 = ""
+iono_broadcast = ""
+
+[ic_tucat]
+description = "Technical Univ. of Catalonia"
+iono_final = "tucat_ionex"
+iono_rapid = "tucat_ionex_rapid_hr"
+iono_predicted1 = ""
+iono_predicted2 = ""
+iono_broadcast = ""
+
+[ic_cas]
+description = "Chinese Academy of Sciences"
+iono_final = "cas_ionex"
+iono_rapid = "cas_ionex_rapid"
+iono_predicted1 = ""
+iono_predicted2 = ""
 iono_broadcast = ""
 
 [ic_whuan]
 description = "Whuan University"
-iono_final = "esa_ionex"
-iono_predicted1 = "esa_predicted1"
-iono_predicted2 = "esa_predicted2"
+iono_final = "whuan_ionex"
+iono_rapid = "whuan_ionex_rapid"
+iono_predicted1 = ""
+iono_predicted2 = ""
 iono_broadcast = ""
 
 #***************************************************************************************************
 # SINGLE FILE DEFINITION FOR IONO
 #***************************************************************************************************
 
-[f_cnes_ionex]
+[f_igs_ionex]
 filename = "igsg${DOY}0.${YY}i"
-location = "iono_cddis"
-
-[f_cnes_ionex_rapid]
-filename = "igrg${DOY}0.${YY}i"
-location = "iono_cddis"
+location = "iono_ign"
 
 [f_code_ionex]
 filename = "CODG${DOY}0.${YY}I"
 location = "aiub_code"
 
+[f_code_ionex_rapid]
+filename = "corg${DOY}0.${YY}i"
+location = "iono_ign"
+
 [f_code_predicted1]
 filename = "COPG${DOY}0.${YY}I"
 location = "iono_aiub_p1"
 
+[f_code_predicted1_bk]
+filename = "c1pg${DOY}0.${YY}i"
+location = "iono_ign"
+
 [f_code_predicted2]
 filename = "c2pg${DOY}0.${YY}i"
-location = "iono_cddis"
+location = "iono_ign"
+
+[f_esa_ionex]
+filename = "esag${DOY}0.${YY}i"
+location = ["esa"]
+
+[f_esa_ionex_rapid]
+filename = "esrg${DOY}0.${YY}i"
+location = ["esa"]
+
+[f_esa_ionex_rapid_hr]
+filename = "ehrg${DOY}0.${YY}i"
+location = ["esa"]
+
+[f_nrcan_ionex_rapid]
+filename = "emrg${DOY}0.${YY}i"
+location = ["iono_ign"]
+
+[f_jpl_ionex]
+filename = "jplg${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_jpl_ionex_rapid]
+filename = "jprg${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_tucat_ionex]
+filename = "upcg${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_tucat_ionex_rapid_hr]
+filename = "uhrg${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_cas_ionex]
+filename = "casg${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_cas_ionex_rapid]
+filename = "carg${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_whuan_ionex]
+filename = "whug${DOY}0.${YY}i"
+location = "iono_ign"
+
+[f_whuan_ionex_rapid]
+filename = "whrg${DOY}0.${YY}i"
+location = "iono_ign"
 
 # CODE ionosphere Klobuchar parameters -------------------------------------------------------------
 
@@ -164,28 +255,12 @@ location = "iono_cddis"
 filename = "CGIM${DOY}0.${YY}N"
 location = ["aiub_code"]
 
-[f_esa_ionex]
-filename = "esag${DOY}0.${YY}i"
-location = ["esa"]
-
-[f_esa_predicted1]
-filename = "ehrg${DOY}0.${YY}i"
-location = ["esa"]
-
-[f_esa_predicted2]
-filename = "esrg${DOY}0.${YY}i"
-location = ["esa"]
-
-[f_whuan_ionex]
-filename = "whug${DOY}0.${YY}i"
-location = "iono_cddis"
-
 #***************************************************************************************************
 # ACCEPTED COMPUTATION CENTERS FOR ORBITS
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
