--- a/data/project/default_PPP/config/settings.ini
+++ b/data/project/default_PPP/config/settings.ini
@@ -143,7 +143,7 @@ iono_dir = "../../reference/IONO/${YYYY}"
 # Directory of Atmospheric Loading Models files
 atm_load_dir = "../../reference/ATM_LOAD/${YYYY}"
 # Directory of VMF Coeficents
-vmf_dir = "../../reference/VMF/${YYYY}"
+vmf_dir = "../../reference/VMF/${VMFR}/${VMFS}/${YYYY}"
 
 #----------------------------------------------------------------------------------
 [SATELLITE]
