Add the iono center using AIUB predicted iono and ign
IGN uses separate naming for P1 and P2 iono, while CODE store everything in the same folder and is more rapidly updated

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -88,7 +88,7 @@ none = ""
 #***************************************************************************************************
 
 [IONO_CENTER]
-available = ["none" "default" "igs" "esa" "jpl" "nrcan" "code" "tucat" "cas" "whuan"]
+available = ["none" "default" "igs" "esa" "jpl" "nrcan" "code" "code_ign" "tucat" "cas" "whuan"]
 
 #***************************************************************************************************
 # IONO CENTER DEFINITION
@@ -123,6 +123,14 @@ iono_final = "code_ionex"
 iono_rapid = "code_ionex_rapid"
 iono_predicted1 = "code_predicted1"
 iono_predicted2 = "code_predicted2"
+iono_broadcast = "code_iono_broadcast"
+
+[ic_code_ign]
+description = "Center for Orbit Determination Europe @ IGN, distinct name for p1/p2"
+iono_final = "code_ionex"
+iono_rapid = "code_ionex_rapid"
+iono_predicted1 = "code_predicted1_bk"
+iono_predicted2 = "code_predicted2_bk"
 iono_broadcast = "code_iono_broadcast"
 
 [ic_esa]
@@ -198,6 +206,10 @@ filename = "c1pg${DOY}0.${YY}i"
 location = "iono_ign"
 
 [f_code_predicted2]
+filename = "COPG${DOY}0.${YY}I"
+location = "iono_aiub_p2"
+
+[f_code_predicted2_bk]
 filename = "c2pg${DOY}0.${YY}i"
 location = "iono_ign"
 
