Add code bias mgex to all the code centers

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -373,6 +373,7 @@ description = "Center for Orbit Determination Europe - 3 day arc"
 final = "( code_eph | code_sp3 ) & ( code_erp1 | code_erp2 ) & ( code_clk_05s | code_clk_30s )"
 final_latency = [168 312]
 iono_center = "code"
+bias = "code_mgex_aiub_bias"
 dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
@@ -383,6 +384,7 @@ description = "Center for Orbit Determination Europe - 1 day arc"
 final = "( code1d_eph | code1d_sp3 ) & ( code_erp2 ) & ( code1d_clk_30s | code1d_clk_05s )"
 final_latency = [168 312]
 iono_center = "code"
+bias = "code_mgex_aiub_bias"
 dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
@@ -393,6 +395,7 @@ description = "Center for Orbit Determination Europe - 3 day arc"
 final = "( code_eph | code_sp3 ) & ( code_erp2 | code_erp1 ) & ( code_clk_30s | code_clk_05s )"
 final_latency = [168 312]
 iono_center = "code"
+bias = "code_mgex_aiub_bias"
 dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
