Update default settings

--- a/data/project/default_PPP/config/parallel_settings.ini
+++ b/data/project/default_PPP/config/parallel_settings.ini
@@ -2,7 +2,7 @@
 [SOFTWARE]
 #----------------------------------------------------------------------------------
 # goGPS config file
-version = "1.0b7"
+version = "1.0b8"
 
 #----------------------------------------------------------------------------------
 [PARALLELISM]
@@ -111,7 +111,7 @@ flag_download = 1
 
 # Preferred ephemeris type,
 # accepted values: "final" "rapid" "ultra" "broadcast"
-preferred_eph = ["final" "rapid" "ultra" "broadcast"]
+preferred_eph = ["final" "rapid" "ultra"]
 # Preferred ionospheric type,
 # accepted values: "final" "rapid" "predicted1" "predicted2" "broadcast"
 preferred_iono = ["final" "rapid" "predicted1" "predicted2" "broadcast"]
@@ -120,10 +120,10 @@ selected_orbit_center = ["default"]
 selected_iono_center = ["code"]
 # Preferred VMF resolution,
 # accepted values: "1x1" "2.5x2" "5x5"
-preferred_vmf_res = ["2.5x2"]
+preferred_vmf_res = ["1x1" "2.5x2" "5x5"]
 # Preferred VMF source,
 # accepted values: "operational" "era-interim" "forecast"
-preferred_vmf_source = ["forecast"]
+preferred_vmf_source = ["operational" "era-interim" "forecast"]
 
 #----------------------------------------------------------------------------------
 [REFERENCE]
@@ -157,8 +157,8 @@ clk_dir = "../../satellite/CLK/${WWWW}"
 # Directory of CRX files (containing satellite problems)
 crx_dir = "../../satellite/CRX"
 
-# Directory of DCB files (Differential Code Biases)
-dcb_dir = "../../satellite/DCB"
+# Directory of BIAS files
+bias_dir = "../../satellite/BIAS"
 
 # Directory of EMS files (EGNOS Message Server).
 ems_dir = "../../satellite/SBAS/EMS"
