--- a/data/project/default_PPP/config/settings.ini
+++ b/data/project/default_PPP/config/settings.ini
@@ -2,7 +2,7 @@
 [SOFTWARE]
 #----------------------------------------------------------------------------------
 # goGPS config file
-version = "1.0b7"
+version = "1.0b8"
 
 #----------------------------------------------------------------------------------
 [PARALLELISM]
@@ -157,8 +157,8 @@ clk_dir = "../../satellite/CLK/${WWWW}"
 # Directory of CRX files (containing satellite problems)
 crx_dir = "../../satellite/CRX"
 
-# Directory of DCB files (Differential Code Biases)
-dcb_dir = "../../satellite/DCB"
+# Directory of BIAS files
+bias_dir = "../../satellite/BIAS"
 
 # Directory of EMS files (EGNOS Message Server).
 ems_dir = "../../satellite/SBAS/EMS"
