Remove DCB, add BIAS only, improving downloads in File_Wizard

--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,10 @@
 !/data/satellite/SBAS/EMS
 /data/satellite/SBAS/EMS/*
 !/data/satellite/SBAS/EMS/.gitignore
-!/data/satellite/DCB
-/data/satellite/DCB/*
-!/data/satellite/DCB/.gitignore
+/data/satellite/DCB
+!/data/satellite/BIAS
+/data/satellite/BIAS/*
+!/data/satellite/BIAS/.gitignore
 
 !/data/reference/ATM_LOAD
 /data/reference/ATM_LOAD/*
